# uni-rating-checker

./: .editorconfig  .env.sample  .gitignore  Cargo.toml  README.md  build.rs  uni-rating-checker.sublime-project
.githooks/: pre-commit
src/: main.rs
src/api/: common.rs  itmo.rs  messages.rs  mod.rs  tg.rs
src/api/tg/: mod.rs  send.rs  updates.rs
src/db/: mod.rs  sqlite.rs
src/db/sql/: init.sql  insert_competition.sql  insert_program.sql  select_all_competitions.sql  select_competition.sql  update_competition.sql
src/db/sql/delete/: all_cache.sql  competition.sql  competitions_by_user.sql
src/db/sql/insert/: cache.sql  competition.sql  deleted.sql  program.sql
src/db/sql/select/: cache.sql  chat_ids.sql  competition.sql  competitions_by_user.sql  deleted.sql  program.sql  statistics_chats.sql
src/model/: db.rs  error.rs  itmo.rs  mod.rs  tg.rs
