[package]
name = "uni-rating-checker"
version = "0.1.0"
edition = "2021"
repository = "https://github.com"

[features]
prod = ["dirs"]

[dependencies]
dirs = { version = "4.0.0", optional = true }
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }

# wait for https://github.com/rodrimati1992/const_format_crates/issues/44
[dependencies.const_format]
git = "https://github.com/istudyatuni/const_format_crates"
branch = "fix-name-collision"
package = "const_format"

[profile.release]
lto = true
strip = true
