[package]
name = "uni-rating-checker"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/istudyatuni/uni-rating-checker"

[features]
prod = ["dirs"]
migrate = []

[dependencies]
dirs = { version = "4.0.0", optional = true }
reqwest = { version = "0.11.11", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.1", features = ["full"] }
# for enum "ParseError"
url = "2.2.2"

# wait for https://github.com/rodrimati1992/const_format_crates/issues/44
[dependencies.const_format]
git = "https://github.com/istudyatuni/const_format_crates"
branch = "fix-name-collision"
package = "const_format"

[profile.release]
lto = true
strip = true
